--- a/Front-end/src/app/app.component.html
+++ b/Front-end/src/app/app.component.html
@@ -1,9 +1,4 @@
-<app-header></app-header>
-<div class="container">
-    <div class="row">
-      <div class="col-md-6">
-          <h1>Witaj w serwisie E-Harmonia</h1>
-      </div>
-    </div>
+<div style="background-color:#ebeff5; height: 100vh;">
+    <app-header></app-header>
+    <router-outlet></router-outlet>
 </div>
-<router-outlet></router-outlet>
