--- a/Front-end/src/app/header/header.component.html
+++ b/Front-end/src/app/header/header.component.html
@@ -1,16 +1,53 @@
 <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top ">
-<a routerLinkActive="active" routerLink="" class="navbar-brand">
-  <img src="http://eduharmonia.pl/wp-content/themes/eduharmonia/images/logo.png" height="30px;" alt="HarmoniaBrand" class="align-top">
-  E-Hamornia
-</a>
-<button type="button" class="navbar-toggler" data-toggle="collapse" (click)="toggleNavbar()">
-  X
-</button>
-<div class="collapse navbar-collapse justify-content-end" [ngClass]="{ 'show': navbarOpen }">
-  <ul class="navbar-nav">
-    <li class="nav-item" routerLinkActive="active" routerLink="/login">
-        <a class="nav-item navlink btn btn-outline-success">Zaloguj się!</a>
-    </li>
-  </ul>
-</div>
+  <a routerLinkActive="active" routerLink="" class="navbar-brand">
+    <img src="http://eduharmonia.pl/wp-content/themes/eduharmonia/images/logo.png" height="30px;" alt="HarmoniaBrand"
+      class="align-top">
+    E-Hamornia
+  </a>
+  <button type="button" style="float: right;" class="navbar-toggler btn btn-outline-success" data-toggle="collapse"
+    (click)="toggleNavbar()">X</button>
+
+  <div class="collapse navbar-collapse" [ngClass]="{ 'show': navbarOpen }">
+    <ul class="navbar-nav">
+      <!-- Admin Section -->
+      <ng-template [ngIf]="getRole()=='admin'">
+        <li class="nav-item" routerLinkActive="active" routerLink="">
+          <a class="nav-link">Admin Panel</a>
+        </li>
+      </ng-template>
+      <!-- Parent Section -->
+      <ng-template [ngIf]="getRole()=='parent'">
+        <li class="nav-item" routerLinkActive="active" routerLink="">
+          <a class="nav-link">Panel Rodzica</a>
+        </li>
+      </ng-template>
+      <!-- Teacher Section -->
+      <ng-template [ngIf]="getRole()=='teacher'">
+        <li class="nav-item" routerLinkActive="active" routerLink="">
+          <a class="nav-link">Panel Nauczyciela</a>
+        </li>
+      </ng-template>
+      <!-- Secretary Section -->
+      <ng-template [ngIf]="getRole()=='secretary'">
+        <li class="nav-item" routerLinkActive="active" routerLink="">
+          <a class="nav-link">Panel Sekretarki</a>
+        </li>
+      </ng-template>
+    </ul>
+  </div>
+  <div class="collapse navbar-collapse justify-content-end" [ngClass]="{ 'show': navbarOpen }">
+    <ul class="navbar-nav">
+      <ng-template [ngIf]="isAuthenticated()">
+        <li class="nav-item" routerLinkActive="active" routerLink="">
+          <a (click)="onLogOut()" class=" btn btn-outline-success">Wyloguj</a>
+        </li>
+      </ng-template>
+      <ng-template [ngIf]="!isAuthenticated()">
+        <li class="nav-item" routerLinkActive="active" routerLink="/login">
+          <a class="btn btn-outline-success">Zaloguj się!</a>
+        </li>
+      </ng-template>
+    </ul>
+  </div>
+
 </nav>
