ADD: Add Class View

--- a/Front-end/src/app/header/header.component.html
+++ b/Front-end/src/app/header/header.component.html
@@ -32,6 +32,17 @@
         <li class="nav-item" routerLinkActive="active" routerLink="">
           <a class="nav-link">Panel Sekretarki</a>
         </li>
+        <li class="divider nav-item"></li>
+        <li class="nav-item" routerLinkActive="active" routerLink="/secretary/class">
+            <a class="nav-link">Klasy</a>
+        </li>
+        <li class="nav-item" routerLinkActive="active" routerLink="">
+            <a class="nav-link">Uczniowie</a>
+        </li>
+        <li class="nav-item" routerLinkActive="active" routerLink="">
+            <a class="nav-link">Wiadomości</a>
+        </li>
+
       </ng-template>
     </ul>
   </div>
