--- a/Front-end/src/app/app.component.html
+++ b/Front-end/src/app/app.component.html
@@ -1,4 +1,7 @@
-<div style="background-color:#ebeff5; height: 100vh;">
+<div class="h-100">
     <app-header></app-header>
     <router-outlet></router-outlet>
+    <nav class="navbar fixed-bottom navbar-light bg-light justify-content-center" style="height: 36px">
+        <a href="http://eduharmonia.pl/" target="_blank" class="badge badge-success">Strona naszej szkoły Eduharmonia.pl</a>
+    </nav>
 </div>
