ADD: Students conection with DB

--- a/Front-end/src/app/secretary/class-list/class-list.component.html
+++ b/Front-end/src/app/secretary/class-list/class-list.component.html
@@ -1,31 +1,31 @@
 <div class="container overflow">
-  <div class="row justify-content-center">
-      <div class="col-10">
-        <div class="card">
-          <div class="card-header">
-            <button class="btn btn-primary" (click)=open(content)>Dodaj klasę</button>
+  <div class="row justify-content-center my-5">
+    <div class="col-10">
+      <div class="card">
+        <div class="card-header">
+          <button class="btn btn-primary my-1" (click)=open(content)>Dodaj klasę</button>
+          <div *ngIf="alertFlag" class="alert alert-primary my-1" role="alert">
+            {{ alertMsg }}
           </div>
-          <div class="card-body">
-            <h5 class="card-title">Lista klas</h5>
-            <table class="table table-striped">
-              <tr>
-                <th scope="col">#</th>
-                <th scope="col">Numer klasy</th>
-                <th scope="col">Litera</th>
-              </tr>
-              <tr *ngFor="let class of classes; index as i">
-                <th scope="col"> {{i+1}} </th>
-                <td> {{class.NR_KLASY}} </td>
-                <td> {{class.LIT_KLASY}} </td>
-              </tr>
-            </table>
-          </div>
-          <div *ngIf="alertFlag" class="alert alert-primary" role="alert">
-              {{ alertMsg }}
-          </div>
+        </div>
+        <div class="card-body">
+          <h5 class="card-title">Lista klas</h5>
+          <table class="table table-striped">
+            <tr>
+              <th scope="col">#</th>
+              <th scope="col">Numer klasy</th>
+              <th scope="col">Litera</th>
+            </tr>
+            <tr *ngFor="let class of classes; index as i">
+              <th scope="col"> {{i+1}} </th>
+              <td> {{class.NR_KLASY}} </td>
+              <td> {{class.LIT_KLASY}} </td>
+            </tr>
+          </table>
         </div>
       </div>
     </div>
+  </div>
 </div>
 
 <!-- Modal for button -->
@@ -36,14 +36,44 @@
   <div class="modal-body">
     <div class="container">
       <div class="row">
-        <div class="col-9">
-            <input #box type="text" (keyup.enter)="modal.close(box.value)" style="width: 100%; height: 38px">
+        <div class="col-12">
+          <div class="form-group">
+            <label for="exampleFormControlSelect1">Numer klasy</label>
+            <select #box1 class="form-control" id="exampleFormControlSelect1">
+              <option>0</option>
+              <option>1</option>
+              <option>2</option>
+              <option>3</option>
+              <option>4</option>
+              <option>5</option>
+              <option>6</option>
+              <option>7</option>
+              <option>8</option>
+            </select>
+          </div>
         </div>
-        <div class="col-1"></div>
-        <div class="col-2">
-            <button class="btn btn-primary" (click)="modal.close(box.value)">Dodaj</button>
+        <div class="col-12">
+          <div class="form-group">
+            <label for="exampleFormControlSelect2">Litera klasy</label>
+            <select #box2 class="form-control" id="exampleFormControlSelect2">
+              <option>A</option>
+              <option>B</option>
+              <option>C</option>
+              <option>D</option>
+              <option>E</option>
+              <option>F</option>
+              <option>G</option>
+              <option>J</option>
+              <option>K</option>
+              <option>L</option>
+              <option>M</option>
+            </select>
+          </div>
+        </div>
+        <div class="col-12">
+            <button class="btn btn-primary btn-block" (click)="modal.close([box1.value, box2.value])">Dodaj</button>
         </div>
       </div>
-    </div>   
+    </div>
   </div>
 </ng-template>
