ADD: Add student view

--- a/Front-end/src/app/secretary/class-list/class-list.component.html
+++ b/Front-end/src/app/secretary/class-list/class-list.component.html
@@ -31,7 +31,7 @@
 <!-- Modal for button -->
 <ng-template #content let-modal>
   <div class="modal-header">
-    <h4 class="modal-title">Wpisz nazwę klasy</h4>
+    <h4 class="modal-title">Wprowadź dane klasy</h4>
   </div>
   <div class="modal-body">
     <div class="container">
@@ -71,7 +71,7 @@
           </div>
         </div>
         <div class="col-12">
-            <button class="btn btn-primary btn-block" (click)="modal.close([box1.value, box2.value])">Dodaj</button>
+            <button class="btn btn-primary btn-block" (click)="modal.close([box1.value, box2.value])">Dodaj klasę</button>
         </div>
       </div>
     </div>
