--- a/Front-end/src/app/app.component.html
+++ b/Front-end/src/app/app.component.html
@@ -1,7 +1,4 @@
-<div class="h-100">
+<div class="app-wrapper">
     <app-header></app-header>
     <router-outlet></router-outlet>
-    <nav class="navbar fixed-bottom navbar-light bg-light justify-content-center" style="height: 36px">
-        <a href="http://eduharmonia.pl/" target="_blank" class="badge badge-success">Strona naszej szkoły Eduharmonia.pl</a>
-    </nav>
 </div>
