--- a/Front-end/src/app/main/main.component.html
+++ b/Front-end/src/app/main/main.component.html
@@ -1,42 +1,18 @@
-<div class="container my-3">
+<div class="container">
   <div class="row">
-    <div class="col-12">
-        <h2 class="text-center">Witaj w serwisie E-Harmonia</h2>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-12">
-      <h3>Aktualności:</h3>
-    </div>
-    <div class="col-12 col-md-4 my-3">
-      <div class="card h-100">
-        <img src="https://picsum.photos/id/20/200/120" alt="" class="card-img-top">
-        <div class="card-body">
-          <h5 class="card-title">Przerwa wakacyjna dobiega końca</h5>
-          <p class="card-text">Wraz z dniem pierwszego września kończą się nasze ukochane wakacje...</p>
-          <a  class="btn btn-primary">Więcej...</a>
-        </div>
+    <div class="col-md-4" style="padding: 5px;">
+      <div class="sidebar">
+          <ul>
+              <li>Dodaj klasę</li>
+              <li>Wprowadź uczniów</li>
+              <li>Stwórz konto</li>
+          </ul>
       </div>
     </div>
-    <div class="col-12 col-md-4 my-3">
-        <div class="card h-100">
-          <img src="https://picsum.photos/id/145/200/120" alt="" class="card-img-top">
-          <div class="card-body">
-            <h5 class="card-title">Nowe instrumenty w naszej szkole!</h5>
-            <p class="card-text">Sprawdź na czym będziemy grać w nadchodzącym semestrze...</p>
-            <a  class="btn btn-primary">Więcej...</a>
-          </div>
-        </div>
+    <div class="col-md-8" style="padding: 5px;">
+      <div class="sidebar">
+          <h1>Witaj w serwisie E-Harmonia</h1>
       </div>
-      <div class="col-12 col-md-4 my-3">
-          <div class="card h-100">
-            <img src="https://picsum.photos/id/24/200/120" alt="" class="card-img-top">
-            <div class="card-body">
-              <h5 class="card-title">Konkurs wiedzy</h5>
-              <p class="card-text">W naszej szkole dnia 15 września odbędzie się konkurs...</p>
-              <a  class="btn btn-primary">Więcej...</a>
-            </div>
-          </div>
-        </div>
+    </div>
   </div>
 </div>
