--- a/Front-end/src/app/main/main.component.scss
+++ b/Front-end/src/app/main/main.component.scss
@@ -1,6 +1,6 @@
-.sidebar{
+.sidebar {
     padding: 20px;
-    background-color: #ffffff;
+    background-color: white;
     border-radius: 10px;
     box-shadow: 1px 3px 5px #888888;
 }
