--- a/Front-end/src/app/header/header.component.html
+++ b/Front-end/src/app/header/header.component.html
@@ -53,7 +53,7 @@
         <li class="nav-item" routerLinkActive="active" routerLink="secretary/students">
             <a class="nav-link">Uczniowie</a>
         </li>
-        <li class="nav-item" routerLinkActive="active" routerLink="secretary/schedule">
+        <li class="nav-item" routerLinkActive="active" routerLink="secretary/schedule/plan">
           <a class="nav-link">Plan lekcji</a>
         </li>
       </ng-template>
