added plan render

--- a/Front-end/src/app/secretary/schedule/schedule.component.html
+++ b/Front-end/src/app/secretary/schedule/schedule.component.html
@@ -1,6 +1,6 @@
 <div class="row row-size" style="margin: 0;">
-  <app-schedule-aside class="col-md-4" style="padding: 0;"></app-schedule-aside>
-  <div class="col-md-8" style="padding: 0;">
+  <app-schedule-aside class="col-md-4 col-lg-3" style="padding: 0;"></app-schedule-aside>
+  <div class="col-md-8 col-lg-9" style="padding: 0;">
     <div class="section-nav-wrapper">
       <button class="btn-green">Plan lekcji klas</button>
       <button class="btn-green">Plan lekcji uczniów i nauczycieli</button>
@@ -14,73 +14,73 @@
               <th>Środa</th>
               <th>Czwartek</th>
               <th>Piątek</th>
-              <th>Sobota</th>
-              <th>Niedziela</th>
             </tr>
-            <tr>
+            <tr data-start-hour="7">
+              <td>7-8</td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr data-start-hour="8">
               <td>8-9</td>
               <td></td>
               <td></td>
               <td></td>
               <td></td>
               <td></td>
-              <td></td>
-              <td></td>
             </tr>
-            <tr>
+            <tr data-start-hour="9">
               <td>9-10</td>
               <td></td>
               <td></td>
               <td></td>
               <td></td>
               <td></td>
-              <td></td>
-              <td></td>
             </tr>
-            <tr>
+            <tr data-start-hour="10">
               <td>10-11</td>
               <td></td>
               <td></td>
               <td></td>
               <td></td>
               <td></td>
-              <td></td>
-              <td></td>
             </tr>
-            <tr>
+            <tr data-start-hour="11">
               <td>11-12</td>
               <td></td>
               <td></td>
               <td></td>
               <td></td>
               <td></td>
-              <td></td>
-              <td></td>
             </tr>
-            <tr>
+            <tr data-start-hour="12">
               <td>12-13</td>
               <td></td>
               <td></td>
               <td></td>
               <td></td>
               <td></td>
-              <td></td>
-              <td></td>
             </tr>
-            <tr>
+            <tr data-start-hour="13">
               <td>13-14</td>
               <td></td>
               <td></td>
               <td></td>
               <td></td>
               <td></td>
-              <td></td>
-              <td></td>
             </tr>
-            <tr>
+            <tr data-start-hour="14">
               <td>14-15</td>
               <td></td>
               <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr data-start-hour="15">
+              <td>15-16</td>
               <td></td>
               <td></td>
               <td></td>
