--- a/Front-end/src/styles.scss
+++ b/Front-end/src/styles.scss
@@ -1,7 +1,50 @@
 /* You can add global styles to this file, and also import other style files */
 @import 'app/styles/index';
 
-
 *, *:before, *:after {
   box-sizing: border-box;
+}
+
+.exercise-element {
+  border-top: 1px solid black;
+  border-bottom: 1px solid black;
+  background-color: $main-green;
+  padding: 20px;
+  position: relative;
+
+  .exercise-name {
+    text-transform: uppercase;
+    font-weight: bold;
+
+    &:after {
+      content: '';
+      border-top: 1px solid black;
+      display: block;
+      margin: 10px auto;
+      width: 15px;
+    }
+  }
+
+  .overlay {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    padding: 5px;
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out;
+    background-color: darken($main-green, 20%);
+    font-size: 9px;
+    overflow: hidden;
+  }
+
+  &:hover {
+    .overlay {
+      opacity: 1;
+    }
+  }
 }
