Added teacher and parent plan components, fixed login to return user id, minor fixes

--- a/Front-end/src/app/header/header.component.html
+++ b/Front-end/src/app/header/header.component.html
@@ -21,7 +21,7 @@
           <a class="nav-link">Panel Rodzica</a>
         </li>
         <li class="divider nav-item"></li>
-        <li class="nav-item" routerLinkActive="active" routerLink="parent/schedule">
+        <li class="nav-item" routerLinkActive="active" routerLink="parent/schedule/plan">
           <a class="nav-link">Plan lekcji</a>
         </li>
         <li class="nav-item" routerLinkActive="active" routerLink="parent/attendance">
@@ -37,7 +37,7 @@
           <a class="nav-link">Panel Nauczyciela</a>
         </li>
         <li class="divider nav-item"></li>
-        <li class="nav-item" routerLinkActive="active" routerLink="teacher/schedule">
+        <li class="nav-item" routerLinkActive="active" routerLink="teacher/schedule/plan">
           <a class="nav-link">Plan lekcji</a>
         </li>
       </ng-template>
@@ -67,7 +67,7 @@
   <div class="collapse navbar-collapse justify-content-end" [ngClass]="{ 'show': navbarOpen }">
     <ul class="navbar-nav">
       <ng-template [ngIf]="isAuthenticated()">
-        <li class="nav-item"> 
+        <li class="nav-item">
             <a class="nav-link">Witaj <b>{{ username }}</b></a>
         </li>
         <li class="nav-item" routerLinkActive="active" routerLink="">
