--- a/Front-end/src/styles.scss
+++ b/Front-end/src/styles.scss
@@ -12,6 +12,11 @@
   padding: 20px;
   position: relative;
 
+  .ex-name {
+    text-transform: uppercase;
+    font-weight: bold;
+  }
+
   .exercise-name {
     text-transform: uppercase;
     font-weight: bold;
