--- a/Front-end/src/app/parent/schedule/schedule.component.html
+++ b/Front-end/src/app/parent/schedule/schedule.component.html
@@ -1,10 +1,5 @@
-<div class="row row-size" style="margin: 0;">
-  <app-schedule-aside class="col-md-4 col-lg-3" style="padding: 0;"></app-schedule-aside>
-  <div class="col-md-8 col-lg-9" style="padding: 0;">
-    <div class="section-nav-wrapper">
-      <button class="btn-green">Plan lekcji klas</button>
-      <button class="btn-green">Plan lekcji uczniów i nauczycieli</button>
-    </div>
+<div class="row row-size justify-content-center" style="margin: 0;">
+  <div class="col-md-8 col-lg-9 mb-5" style="padding: 0;">
     <main class="schedule-wrapper">
         <table>
             <tr>
